# Server

./: .clang-format  .editorconfig  CMakeLists.txt  README.md
LocalHelper/: CMakeLists.txt  filesystem.cpp  filesystem.h  server.h  test.cpp
StandardProgram/: CMakeLists.txt
